fix overflow

--- a/src/style/CautionPage.css
+++ b/src/style/CautionPage.css
@@ -7,7 +7,8 @@
     max-width: 400px;
     height: 500px;
     max-height: 500px;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 0 auto;
 }
 
